test/errors/error.js
Error({
  name: "Error",
  message: "something went wrong",
  stack: "Error: something went wrong\n    at Object.<anonymous> (/Users/ayon/Workspace/fron/test/errors/index.js:9:13)\n    at Module._compile (node:internal/modules/cjs/loader:1109:14)\n    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1138:10)\n    at Module.load (node:internal/modules/cjs/loader:989:32)\n    at Function.Module._load (node:internal/modules/cjs/loader:829:14)\n    at Module.require (node:internal/modules/cjs/loader:1013:19)\n    at require (node:internal/modules/cjs/helpers:93:18)\n    at Object.<anonymous> (/Users/ayon/Workspace/fron/test/get-types.js:13:5)\n    at Module._compile (node:internal/modules/cjs/loader:1109:14)\n    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1138:10)\n    at Module.load (node:internal/modules/cjs/loader:989:32)\n    at Function.Module._load (node:internal/modules/cjs/loader:829:14)\n    at Module.require (node:internal/modules/cjs/loader:1013:19)\n    at require (node:internal/modules/cjs/helpers:93:18)\n    at /Users/ayon/Workspace/fron/node_modules/mocha/lib/mocha.js:250:27\n    at Array.forEach (<anonymous>)\n    at Mocha.loadFiles (/Users/ayon/Workspace/fron/node_modules/mocha/lib/mocha.js:247:14)\n    at Mocha.run (/Users/ayon/Workspace/fron/node_modules/mocha/lib/mocha.js:576:10)\n    at Object.<anonymous> (/Users/ayon/Workspace/fron/node_modules/mocha/bin/_mocha:637:18)\n    at Module._compile (node:internal/modules/cjs/loader:1109:14)\n    at Object.Module._extensions..js (node:internal/modules/cjs/loader:1138:10)\n    at Module.load (node:internal/modules/cjs/loader:989:32)\n    at Function.Module._load (node:internal/modules/cjs/loader:829:14)\n    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:76:12)\n    at node:internal/main/run_main_module:17:47"
})